--- a/Sharpener's_Tasks/async_Expense_tracker/package.json
+++ b/Sharpener's_Tasks/async_Expense_tracker/package.json
@@ -7,5 +7,16 @@
     "start": "nodemon app.js"
   },
   "author": "Alok Kumar",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.1.3",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.25.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
